# unihack-2025

./: .gitignore  Makefile  docker-compose.yml  export.js  package-lock.json  package.json
.github/workflows/: backend-deploy.yml  frontend-deploy.yml  lint-checker.yml
RustSerial/src/: main.rs
backend/: Dockerfile.dev  Dockerfile.prod  build.gradle  settings.gradle
export/: backend-src-main-java.txt  backend-src-main-resources.txt  frontend-app-pick-game.txt  frontend-app-poker-dealer.txt  frontend-app-poker-game.txt  frontend-app-poker-player.txt  frontend-app-poker-waiting.txt  frontend-app-poker.txt  frontend-app.txt  frontend-components-ui.txt  frontend-components.txt  frontend-hooks.txt  frontend-lib.txt  frontend.txt  root.txt  tree-structure.txt
frontend/: Dockerfile.dev  Dockerfile.prod  global.d.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: README.md  layout.tsx  page.tsx
frontend/app/pick-game/: page.tsx
frontend/app/poker/: page.tsx
frontend/app/start/: page.tsx
frontend/components/: ai-advisor.tsx  community-cards.tsx  dealer-view.tsx  debug-navigation.tsx  dot-background.tsx  game-actions.tsx  player-actions.tsx  player-hand.tsx  player-view.tsx  playing-card.tsx  raise-dialog.tsx  session-recovery-toast.tsx
frontend/hooks/: useAzureSpeechRecognition.ts  useAzureSpeechSynthesis.ts
frontend/lib/: ai-advisor-service.ts  fuzzy-match.ts  game-context.tsx  name-generator.ts  openai-service.ts  types.ts  utils.ts  websocket-service.ts
scanner/: Cargo.toml
src/: App.css  App.jsx  file.jsx  folderStructure.js
(+60 files in other folders)
