[package]
name = "RustSerial"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"]}
reqwest = {version="0.12.14", features = ["json"]}
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serialport = "4.7.0"
tokio = {version="1.44.0",features = ["full"] }
